compilateurDeca/src/test/deca/context/invalid/objet/comparaison/objet_cmp_null.deca
// Description:
//    Test de contexte : comparaison > entre un objet et null
//
// Resultats:
//    Erreur contextuelle
//
// Historique:
//    cree le 13/01/2026

class A {}
{
  A a = new A();
  if (a > null) {
  }
}
